fix: selected list wrap

--- a/src/shared/pinined/pinned.module.css
+++ b/src/shared/pinined/pinned.module.css
@@ -18,7 +18,8 @@
   font-size: 24px;
 
   background-color: var(--background-color);
-  border: 1px solid var(--grey-dark);
+
+  /* border: 1px solid var(--grey-dark); */
   border-radius: 16px;
 }
 
